Adjust Header to Fix Breakage on iPhone6

--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -1,13 +1,30 @@
+@media only screen and (min-width: 375px) and (max-height: 812px) and (orientation: portrait) {
+  h4 {
+    display: flex;
+    justify-content: center;
+    font-size: 2.25vh;
+    }
+  h5 {
+    font-size: 2.25vh;
+   }
+  a.text-white {
+    font-size: 1.75vh;
+  }
+  .fa-dollar-sign {
+    font-size: 1.5em;
+  }
+  .fa-shopping-cart {
+    font-size: 1.5em;
+  }
+}
+
+
 img {
   object-fit: contain;
 }
 
 p {
   font-size: 1.1rem;
-}
-
-h4 {
-  padding-left: 8rem;
 }
 
 .inner-shadow:hover {
